tests/tooling/fixtures/native/recovery/negative/neg_param_type_generic.objc3
// Negative fixture: generic-like parameter type syntax is unsupported.
// Expected diagnostic code(s): O3P108, O3P110, O3P100.
module NegativeGenericParamType;

fn passthrough(value: Box<i32>): i32 {
  return 1;
}

fn main(): i32 {
  return passthrough(1);
}
